--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -4,20 +4,37 @@
     android:layout_height="match_parent"
     tools:context="in.swatcchindia.goclean.Screens.PostFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <!-- TODO: Update blank fragment layout -->g/hello_blank_fragment" />
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_height="150dp"
         android:id="@+id/img2"/>
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+    <EditText
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+
+        android:layout_marginBottom="50dp"
+        android:layout_gravity="center" />
+
+    <EditText
+        android:layout_width="229dp"
+        android:layout_marginBottom="70dp"
+
+        android:layout_height="218dp"
+        android:id="@+id/editText2"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="POST"
+
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal|bottom" />
 
 
 </FrameLayout>
