--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="20dp"
     android:theme="@style/MyCustomToolbartheme"
+
+
+    android:background="@color/colorPrimary"
     android:popupTheme="@style/MyCustomToolbartheme"
 
     >
