--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,14 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar"></style>
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar"></style>
 
-    <style name="MyCustomToolbartheme" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="android:textColorPrimary">#FF9800</item>
-        <item name="android:textColorSecondary">#FFB74D</item>
+    <style name="MyCustomToolbartheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorPrimary">#EEFF41</item>
+
+        <item name="android:textColorSecondary">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+        <item name="colorPrimary">#388E3C</item>
+    </style>
 
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
