--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -20,20 +20,20 @@
         android:layout_marginBottom="50dp"
         android:layout_gravity="center" />
 
-    <EditText
-        android:layout_width="229dp"
-        android:layout_marginBottom="70dp"
-
-        android:layout_height="218dp"
-        android:id="@+id/editText2"
-        android:layout_gravity="center_horizontal|bottom" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="POST"
+        android:text="SEND TO BASE"
 
-        android:id="@+id/button"
+        android:id="@+id/send_to_base"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    <EditText
+        android:layout_width="225dp"
+        android:layout_marginBottom="70dp"
+
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
         android:layout_gravity="center_horizontal|bottom" />
 
 
